--- a/proj2/index.html
+++ b/proj2/index.html
@@ -2,6 +2,6 @@
 	<head>
 	</head>
 	<body>
-		Project 2 here
+		<p>Website: <a href="https://cal-cs184-student.github.io/sp22-project-webpages-CarneAsadaFry/proj1/index.html">https://cal-cs184-student.github.io/sp22-project-webpages-CarneAsadaFry/proj1/index.html</a></p>
 	</body>
 </html>
