--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -2,6 +2,7 @@
 	<head>
 	</head>
 	<body>
-		Project 3-1 here
+		Link: https://cal-cs184-student.github.io/sp22-project-webpages-CarneAsadaFry/proj3-1/
+
 	</body>
 </html>
