--- a/final/index.html
+++ b/final/index.html
@@ -106,7 +106,7 @@
 
                 <img src="pressure state eq.png">
 
-                where &rho<sub>0</sub> is the rest density (a constant we chose, based on the initial density of the fluid cube),
+                where &rho;<sub>0</sub> is the rest density (a constant we chose, based on the initial density of the fluid cube),
                 and k is the ideal gas constant, which effects the strength of the pressure force (we chose a value of
                 0.00000005). Finally, the pressure force for the ith particle is given by
 
@@ -122,7 +122,7 @@
                 <img src="viscosity eq.png">
 
 
-                Here, &mu is the viscosity constant (we used 0.0005), m is mass, v is velocity, &rho is density, and W is
+                Here, &mu; is the viscosity constant (we used 0.0005), m is mass, v is velocity, &rho; is density, and W is
                 the viscosity kernel. The viscosity acts on the velocities of the particles by slowing them down when
                 they are close to each other. Below, we can see our fluid both with and without viscosity.
 
@@ -145,7 +145,7 @@
                 <img src="surface tension eq.png">
 
 
-                where &sigma is a constant (we used 0.000000000001). The surface tension pulls particles on the surface
+                where &sigma; is a constant (we used 0.000000000001). The surface tension pulls particles on the surface
                 of the fluid closer to the fluid, preventing excessive splashing. We can see the effects in the
                 following comparison.
 
