--- a/final/index.html
+++ b/final/index.html
@@ -196,10 +196,10 @@
                 <h3 align="middle">References</h3>
 
                 <p>
-                    Particle-Based Fluid Simulation for Interactive Applications - Paper detailing an SPH fluid
+                    <a href="https://matthias-research.github.io/pages/publications/sca03.pdf">Particle-Based Fluid Simulation for Interactive Applications</a> - Paper detailing an SPH fluid
                     simulator
-                    Implementing SPH in 2D - Explanations for implementing a 2D version of the above
-                    Position Based Fluids - Implementation of a more complex incompressibility constraint
+                    <a href="https://lucasschuermann.com/writing/implementing-sph-in-2d">Implementing SPH in 2D</a> - Explanations for implementing a 2D version of the above
+                    <a href="http://mmacklin.com/pbf_sig_preprint.pdf">Position Based Fluids</a> - Implementation of a more complex incompressibility constraint
 
 
                 </p>
