--- a/final/index.html
+++ b/final/index.html
@@ -197,8 +197,8 @@
 
                 <p>
                     <a href="https://matthias-research.github.io/pages/publications/sca03.pdf">Particle-Based Fluid Simulation for Interactive Applications</a> - Paper detailing an SPH fluid
-                    simulator
-                    <a href="https://lucasschuermann.com/writing/implementing-sph-in-2d">Implementing SPH in 2D</a> - Explanations for implementing a 2D version of the above
+                    simulator</br>
+                    <a href="https://lucasschuermann.com/writing/implementing-sph-in-2d">Implementing SPH in 2D</a> - Explanations for implementing a 2D version of the above</br>
                     <a href="http://mmacklin.com/pbf_sig_preprint.pdf">Position Based Fluids</a> - Implementation of a more complex incompressibility constraint
 
 
@@ -211,16 +211,16 @@
                     make non-realtime videos of our simulation. Implemented a version of the spatial map to work with
                     our algorithm to accelerate physics calculations. Adjusted sensitive parameter values until desired
                     simulation results were achieved. Rendered several videos for our presentation and writeup. Worked
-                    on the writeup.
+                    on the writeup. </br>
 
                     Larry Yan: Modified particle initialization parameters to use a variable rest density. Created and
                     tested different shaders for the fluid, including the final height-based color gradient and altered
-                    the cloth simulation code to better render the particles. Worked on the writeup.
+                    the cloth simulation code to better render the particles. Worked on the writeup.</br>
 
                     Nate Tausik: Implemented basic structure of point fluid particles, wrote code for incompressibility
                     constraints, and some of the kernel functions. Created the collision detection for the rectangular
                     box and sphere object, and helped with the cylindrical collision. Helped tune parameters for demo
-                    videos. Created some of the demo videos for project presentation. Worked on the writeup.
+                    videos. Created some of the demo videos for project presentation. Worked on the writeup.</br>
 
                     Eshaan Bhansali: Read through different fluid simulation papers to determine which algorithm would
                     work best for our project. Worked on the main fluid simulation algorithm, including computing the
