--- a/final/index.html
+++ b/final/index.html
@@ -184,10 +184,8 @@
             <h2 align="middle">Results</h3>
 
                 <p>
-                    Rectangular Box, All Effects
-
-                    Sphere Collision, All Effects
-
+                    <iframe src="https://drive.google.com/file/d/10sjsUgbqqFOCAoxAm3pNf3A9HbEIFKPU/preview" width="640" height="480" allow="autoplay"></iframe>
+                    <iframe src="https://drive.google.com/file/d/15CqpvXwkvwdBE3Y6OlcfMn3u5ICd1K8a/preview" width="640" height="480" allow="autoplay"></iframe>
                     <iframe src="https://drive.google.com/file/d/1BBdyQZj8YXDjPcbEsy_ECMYZjGFUgV0I/preview" width="640" height="480" allow="autoplay"></iframe>
 
                 </p>
