--- a/final/index.html
+++ b/final/index.html
@@ -153,10 +153,11 @@
 
                 where &sigma; is a constant (we used 0.000000000001). The surface tension pulls particles on the surface
                 of the fluid closer to the fluid, preventing excessive splashing. We can see the effects in the
-                following comparison.</br>
+                following comparison.</br></br>
 
-                <iframe src="https://drive.google.com/file/d/1zg9aEnN0uA5knMjGRBd9rSEZr71A3unV/preview" width="640"
-                    height="480" allow="autoplay" align="middle"></iframe>
+
+
+                <iframe src="https://drive.google.com/file/d/1zg9aEnN0uA5knMjGRBd9rSEZr71A3unV/preview" width="640" height="480" allow="autoplay"></iframe></br>
 
                 Notice that the splash is much more constrained with surface tension. After computing these forces for
                 each particle, the constant gravitational force is added to each particle’s forces as well. Then, Euler
@@ -190,16 +191,13 @@
 
 
                 <h3> Fluid falling into rectangular box</h3>
-                <iframe src="https://drive.google.com/file/d/10sjsUgbqqFOCAoxAm3pNf3A9HbEIFKPU/preview" width="640"
-                    height="480" allow="autoplay" align="middle"></iframe>
+                <iframe src="https://drive.google.com/file/d/10sjsUgbqqFOCAoxAm3pNf3A9HbEIFKPU/preview" width="640" height="480" allow="autoplay"></iframe>
                 <h3> Fluid falling onto sphere</h3>
 
-                <iframe src="https://drive.google.com/file/d/15CqpvXwkvwdBE3Y6OlcfMn3u5ICd1K8a/preview" width="640"
-                    height="480" allow="autoplay" align="middle"></iframe>
+                <iframe src="https://drive.google.com/file/d/15CqpvXwkvwdBE3Y6OlcfMn3u5ICd1K8a/preview" width="640" height="480" allow="autoplay"></iframe>
                 <h3> Fluid falling into hemisphere</h3>
 
-                <iframe src="https://drive.google.com/file/d/1BBdyQZj8YXDjPcbEsy_ECMYZjGFUgV0I/preview" width="640"
-                    height="480" allow="autoplay" align="middle"></iframe>
+                <iframe src="https://drive.google.com/file/d/1BBdyQZj8YXDjPcbEsy_ECMYZjGFUgV0I/preview" width="640" height="480" allow="autoplay"></iframe>
 
 
 
