--- a/final/index.html
+++ b/final/index.html
@@ -156,9 +156,11 @@
                 following comparison.</p>
 
 <p>
+    <p></p>
 
-                <iframe src="https://drive.google.com/file/d/1zg9aEnN0uA5knMjGRBd9rSEZr71A3unV/preview" width="640" height="480" allow="autoplay"></iframe>
-</p>
+                <iframe src="https://drive.google.com/file/d/1zg9aEnN0uA5knMjGRBd9rSEZr71A3unV/preview" width="640" height="480" allow="autoplay" align="middle"></iframe>
+
+<p></p></p>
 <p>
 
                 Notice that the splash is much more constrained with surface tension. After computing these forces for
@@ -193,13 +195,13 @@
 
 
                 <h3> Fluid falling into rectangular box</h3>
-                <iframe src="https://drive.google.com/file/d/10sjsUgbqqFOCAoxAm3pNf3A9HbEIFKPU/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/10sjsUgbqqFOCAoxAm3pNf3A9HbEIFKPU/preview" width="640" height="480" allow="autoplay" align="middle"></iframe>
                 <h3> Fluid falling onto sphere</h3>
 
-                <iframe src="https://drive.google.com/file/d/15CqpvXwkvwdBE3Y6OlcfMn3u5ICd1K8a/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/15CqpvXwkvwdBE3Y6OlcfMn3u5ICd1K8a/preview" width="640" height="480" allow="autoplay" align="middle"></iframe>
                 <h3> Fluid falling into hemisphere</h3>
 
-                <iframe src="https://drive.google.com/file/d/1BBdyQZj8YXDjPcbEsy_ECMYZjGFUgV0I/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1BBdyQZj8YXDjPcbEsy_ECMYZjGFUgV0I/preview" width="640" height="480" allow="autoplay" align="middle"></iframe>
 
 
 
