--- a/final/index.html
+++ b/final/index.html
@@ -170,7 +170,7 @@
                 reflecting the particle’s velocity about the normal to the surface of collision with some damping
                 coefficient. In order to improve the visualization of the particles, we also added slight transparency
                 to make them appear more water-like and changed the color of the particles as a function of their
-                height, to better visualize the splashing effects of the fluid particles.</br>
+                height, to better visualize the splashing effects of the fluid particles.</p><p>
 
                 The main problems we encountered in our implementation were with the tuning of the parameters of the
                 simulation, especially for large particle counts. We learned that the simulation is extremely sensitive
@@ -227,16 +227,16 @@
                     make non-realtime videos of our simulation. Implemented a version of the spatial map to work with
                     our algorithm to accelerate physics calculations. Adjusted sensitive parameter values until desired
                     simulation results were achieved. Rendered several videos for our presentation and writeup. Worked
-                    on the writeup. </br>
+                    on the writeup. </p><p>
 
                     Larry Yan: Modified particle initialization parameters to use a variable rest density. Created and
                     tested different shaders for the fluid, including the final height-based color gradient and altered
-                    the cloth simulation code to better render the particles. Worked on the writeup.</br>
+                    the cloth simulation code to better render the particles. Worked on the writeup.</p><p>
 
                     Nate Tausik: Implemented basic structure of point fluid particles, wrote code for incompressibility
                     constraints, and some of the kernel functions. Created the collision detection for the rectangular
                     box and sphere object, and helped with the cylindrical collision. Helped tune parameters for demo
-                    videos. Created some of the demo videos for project presentation. Worked on the writeup.</br>
+                    videos. Created some of the demo videos for project presentation. Worked on the writeup.</p><p>
 
                     Eshaan Bhansali: Read through different fluid simulation papers to determine which algorithm would
                     work best for our project. Worked on the main fluid simulation algorithm, including computing the
