--- a/final/index.html
+++ b/final/index.html
@@ -153,15 +153,18 @@
 
                 where &sigma; is a constant (we used 0.000000000001). The surface tension pulls particles on the surface
                 of the fluid closer to the fluid, preventing excessive splashing. We can see the effects in the
-                following comparison.</p>
+                following comparison (note the particle count for these videos is 1000 rather than 42785).
+            </p>
 
-<p>
-    <p></p>
+            <p>
+            <p></p>
 
-                <iframe src="https://drive.google.com/file/d/1zg9aEnN0uA5knMjGRBd9rSEZr71A3unV/preview" width="640" height="480" allow="autoplay" align="middle"></iframe>
+            <iframe src="https://drive.google.com/file/d/1zg9aEnN0uA5knMjGRBd9rSEZr71A3unV/preview" width="640"
+                height="480" allow="autoplay" align="middle"></iframe>
 
-<p></p></p>
-<p>
+            <p></p>
+            </p>
+            <p>
 
                 Notice that the splash is much more constrained with surface tension. After computing these forces for
                 each particle, the constant gravitational force is added to each particle’s forces as well. Then, Euler
@@ -170,7 +173,8 @@
                 reflecting the particle’s velocity about the normal to the surface of collision with some damping
                 coefficient. In order to improve the visualization of the particles, we also added slight transparency
                 to make them appear more water-like and changed the color of the particles as a function of their
-                height, to better visualize the splashing effects of the fluid particles.</p><p>
+                height, to better visualize the splashing effects of the fluid particles.</p>
+            <p>
 
                 The main problems we encountered in our implementation were with the tuning of the parameters of the
                 simulation, especially for large particle counts. We learned that the simulation is extremely sensitive
@@ -179,29 +183,39 @@
                 attempting to pick parameters in a physically motivated way, and also by simple trial and error, trying
                 to identify issues early in the simulation. For some parameters, such as the rest fluid density, we
                 calculated these variables based on the number of particles we used and the size of the fluid cube to
-                avoid manually tuning for every size combination we tested. Another issue that we had was an attractive
-                force between particles when their density was lower than the rest density. This would either result in
-                the outermost particles collapsing inward in an attempt to reach a higher density if the rest density
-                was set to the density of the middle of the fluid, or the interior particles expanding outward if the
-                density was set to match the outer particles to avoid the former effect. This was resolved by removing
-                any attractive negative pressure components from particle force calculations, which was suggested by
-                some implementations of fluid simulations to resolve instability. Throughout this project, we learned a
-                lot about the physics behind fluids and how various physical effects in fluid can be translated into
-                approximate dynamics.
+                avoid manually tuning for every size combination we tested. </p><p>
 
+                Another issue that we had was an attractive force between particles when their density was lower than
+                the rest density. This would either result in the outermost particles collapsing inward in an attempt to
+                reach a higher density if the rest density was set to the density of the middle of the fluid, or the
+                interior particles expanding outward if the density was set to match the outer particles to avoid the
+                former effect. This was resolved by removing any attractive negative pressure components from particle
+                force calculations, which was suggested by some implementations of fluid simulations to resolve
+                instability. Throughout this project, we learned a lot about the physics behind fluids and how various
+                physical effects in fluid can be translated into approximate dynamics.</p><p>
+
+                Due to how often we had to test different simulation parameter values, it was vital that our program did
+                not take too long to compute the physics and render the particles. To this end, we took the idea of
+                spatial maps from project 4 and implemented it for parts of our algorithms that involved finding
+                neighboring particles without looping through all of them. After implementing spatial maps, we were able
+                to reduce our physics calculation/rendering time by nearly half (from about 30 seconds to 16 seconds per
+                frame for 353 particles at 15 steps/frame).
             </p>
 
             <h2 align="middle">Results</h3>
 
 
                 <h3> Fluid falling into rectangular box</h3>
-                <iframe src="https://drive.google.com/file/d/10sjsUgbqqFOCAoxAm3pNf3A9HbEIFKPU/preview" width="640" height="480" allow="autoplay" align="middle"></iframe>
+                <iframe src="https://drive.google.com/file/d/10sjsUgbqqFOCAoxAm3pNf3A9HbEIFKPU/preview" width="640"
+                    height="480" allow="autoplay" align="middle"></iframe>
                 <h3> Fluid falling onto sphere</h3>
 
-                <iframe src="https://drive.google.com/file/d/15CqpvXwkvwdBE3Y6OlcfMn3u5ICd1K8a/preview" width="640" height="480" allow="autoplay" align="middle"></iframe>
+                <iframe src="https://drive.google.com/file/d/15CqpvXwkvwdBE3Y6OlcfMn3u5ICd1K8a/preview" width="640"
+                    height="480" allow="autoplay" align="middle"></iframe>
                 <h3> Fluid falling into hemisphere</h3>
 
-                <iframe src="https://drive.google.com/file/d/1BBdyQZj8YXDjPcbEsy_ECMYZjGFUgV0I/preview" width="640" height="480" allow="autoplay" align="middle"></iframe>
+                <iframe src="https://drive.google.com/file/d/1BBdyQZj8YXDjPcbEsy_ECMYZjGFUgV0I/preview" width="640"
+                    height="480" allow="autoplay" align="middle"></iframe>
 
 
 
@@ -227,16 +241,19 @@
                     make non-realtime videos of our simulation. Implemented a version of the spatial map to work with
                     our algorithm to accelerate physics calculations. Adjusted sensitive parameter values until desired
                     simulation results were achieved. Rendered several videos for our presentation and writeup. Worked
-                    on the writeup. </p><p>
+                    on the writeup. </p>
+                <p>
 
                     Larry Yan: Modified particle initialization parameters to use a variable rest density. Created and
                     tested different shaders for the fluid, including the final height-based color gradient and altered
-                    the cloth simulation code to better render the particles. Worked on the writeup.</p><p>
+                    the cloth simulation code to better render the particles. Worked on the writeup.</p>
+                <p>
 
                     Nate Tausik: Implemented basic structure of point fluid particles, wrote code for incompressibility
                     constraints, and some of the kernel functions. Created the collision detection for the rectangular
                     box and sphere object, and helped with the cylindrical collision. Helped tune parameters for demo
-                    videos. Created some of the demo videos for project presentation. Worked on the writeup.</p><p>
+                    videos. Created some of the demo videos for project presentation. Worked on the writeup.</p>
+                <p>
 
                     Eshaan Bhansali: Read through different fluid simulation papers to determine which algorithm would
                     work best for our project. Worked on the main fluid simulation algorithm, including computing the
