--- a/final/index.html
+++ b/final/index.html
@@ -174,7 +174,11 @@
                 coefficient. In order to improve the visualization of the particles, we also added slight transparency
                 to make them appear more water-like and changed the color of the particles as a function of their
                 height, to better visualize the splashing effects of the fluid particles.</p>
+
+
             <p>
+                        <h2 align="middle">Problems faced</h2>
+
 
                 The main problems we encountered in our implementation were with the tuning of the parameters of the
                 simulation, especially for large particle counts. We learned that the simulation is extremely sensitive
