--- a/final/index.html
+++ b/final/index.html
@@ -267,7 +267,7 @@
                 </p>
 
                 <p>Link to video: <a
-                        href="https://drive.google.com/file/d/19OWOhGUCyZCIoMX09jWvQdgHNk-ZeL4p/view">LINK</a></p>
+                        href="https://drive.google.com/file/d/1RuSaf-xBG4e3NS35cninzCgySwUgSzCg/view?usp=sharing">LINK</a></p>
                 <p>Link to writeup: <a
                         href="https://cal-cs184-student.github.io/sp22-project-webpages-eshaanb5/final/">LINK</a>
                 </p>
